--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 .App{
     min-height: 100vh;
     display: flex;
-    background-image: url('./Images/background.png');
+    background-image: url('./Components/Images/background.png');
     background-size: cover;
     background-position: center;
 }
